1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c: new force-bump, force-no-bump and unforce-bump
	command.
	* man/amadmin.8.in: document them.

1998-12-05  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/FAQ (large filesystems): fixed reference to results missing
	(results missing): updated to 64Kb UDP packets

1998-12-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/infofile.h: rename PLANNER_FORCE to FORCE_FULL
	* server-src/planner.c: rename PLANNER_FORCE to FORCE_FULL
	* server-src/amadmin.c: rename PLANNER_FORCE to FORCE_FULL

1998-12-01  John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: make -t mean do the tape checks, add new -l
	option for doing just the local server (non-tape) checks.  Have -w
	turn on -t.  Have -cs (or -sc) do both server and client checks.
	* man/amcheck.8.in: document above changes and clean up some minor
	formatting issues.

1998-11-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (start_some_dumps): In degraded mode,
	a big dumper should do high priority dump before low priority.
	* server-src/driver.c (sort_by_priority_reversed): sort by
	time if priority is equal.

1998-11-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/infofile.h: declare FORCE_BUMP and FORCE_NO_BUMP
	as command.
	* server-src/amadmin.c (force_one,unforce_one,info_one): work
	with info.command with bit operator.
	* server-src/planner.c (setup_estimate): work with info.command 
	with bit operator, support for FORCE_BUMP and FORCE_NO_BUMP command.

1998-11-27  Thomas Hepper    <th@icem.de>

	* changer-src/scsi-aix.c Some changes in the error handling in
	scsi command execution
	* changer-src/scsi-changer-driver.c More debug prints.
	removed Endian16/Endian24 (replaced with macros)
	* changer-src/scsi-chio.c make get_clean_state work on linux
	* changer-src/scsi-defs.h  added macros for converting from/to
	SCSI CDB MSB type