@@ -1,5 +1,13 @@
 1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/holding.c (size_holding_files): new function to
+	return the sum of the size of all chunk of an image.
+	* server-src/holding.h (size_holding_files): declare.
+	* server-src/driver.c (adjust_diskspace): use size_holding_files 
+	instead of doing a stat of only the first chunk.
+
+1998-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/amadmin.c: new force-bump, force-no-bump and unforce-bump
 	command.
 	* man/amadmin.8.in: document them.
